tests/baselines/reference/ES5For-of23.errors.txt
tests/cases/conformance/statements/for-ofStatements/ES5For-of23.ts(1,1): error TS2482: 'for...of' statements are only available when targeting ECMAScript 6 or higher.


==== tests/cases/conformance/statements/for-ofStatements/ES5For-of23.ts (1 errors) ====
    for (var x of [1, 2, 3]) {
    ~~~
!!! error TS2482: 'for...of' statements are only available when targeting ECMAScript 6 or higher.
        var _a = 0;
        console.log(x);
    }